# content-distribution-platform

./: .dockerignore  .env.example  .gitignore  ADMIN_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_topics.py  002_add_priority_to_topics.py  003_create_generated_contents.py  004_create_filter_rules.py  005_create_distribution_records.py  006_create_revenue_records.py  007_create_platform_configs.py  008_topic_status_to_varchar.py  009_add_mode_package_to_distribution.py
app/: database.py  llm.py  main.py
app/api/: distributors.py  filters.py  generators.py  revenue.py  settings.py  topics.py
app/collector/: base.py  registry.py  scheduler.py
app/distributor/: base.py  registry.py  scheduler.py
app/filter/: __init__.py  base.py  llm.py  registry.py  scheduler.py
app/generator/: __init__.py  base.py  registry.py  scheduler.py
app/models/: __init__.py  distribution.py  filter_rule.py  generated_content.py  platform_config.py  revenue.py  topic.py
app/revenue/: base.py  registry.py  scheduler.py
app/schemas/: distributor.py  filter.py  generator.py  platform_config.py  revenue.py  topic.py
app/workers/: cdp_worker.py  collector_worker.py  (+4 more)
browser-service/: install.bat  login.py  login_weibo.bat  login_xhs.bat  requirements.txt  server.py  start.bat
config/: filter_rules.yaml  settings.py  sources.yaml
docs/: xiaohongshu-promo.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_api.py
(+41 files in other folders)
